hphp/test/slow/unpack_args/unpack_call_ref.php.expectf
Fatal error: Uncaught exception 'InvalidArgumentException' with message 'has_ref() expects parameter 65 to be inout, but the call was not annotated with 'inout'' in %s/unpack_call_ref.php:75
Stack trace:
#0 (): main()
#1 {main}
